--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-select/ng-select": "^0.30.1",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.1",
     "rxjs": "^5.5.6",
+    "select2": "^4.0.6-rc.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
