--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "fuzzy": "^0.1.3",
     "jquery": "^3.3.1",
     "jstree": "^3.3.5",
     "popper.js": "^1.14.1",
