--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-select/ng-select": "^0.30.1",
+    "angular-fusejs": "^1.0.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
-    "fuzzy": "^0.1.3",
     "jquery": "^3.3.1",
     "jstree": "^3.3.5",
+    "ng2-select": "^2.0.0",
     "popper.js": "^1.14.1",
     "rxjs": "^5.5.6",
     "select2": "^4.0.6-rc.1",
+    "select2-bootstrap-theme": "0.1.0-beta.10",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
