--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "game-story-editor",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "ng build && tsc main.ts && electron .",
+    "electron-aot": "ng build --prod && electron .",
+    "package": "electron-packager . GameStoryEditor"
   },
   "private": true,
   "dependencies": {
@@ -29,9 +33,10 @@
     "jquery": "^3.3.1",
     "jstree": "^3.3.5",
     "ng2-select": "^2.0.0",
+    "ngx-electron": "^1.0.4",
     "popper.js": "^1.14.1",
     "rxjs": "^5.5.6",
-    "select2": "^4.0.6-rc.1",
+    "select2": "4.0.3",
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "zone.js": "^0.8.19"
   },
@@ -43,6 +48,8 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "electron": "^1.8.4",
+    "electron-packager": "^12.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
