--- a/package.json
+++ b/package.json
@@ -26,12 +26,18 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-select/ng-select": "^0.30.1",
-    "angular-fusejs": "^1.0.1",
+    "@types/lodash": "^4.14.106",
+    "@types/lodash.get": "^4.4.3",
+    "@types/lodash.set": "^4.3.3",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jstree": "^3.3.5",
+    "lodash": "^4.17.5",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
+    "ng2-fuse": "^0.1.0",
     "ng2-select": "^2.0.0",
     "ngx-electron": "^1.0.4",
     "popper.js": "^1.14.1",
