--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/lodash.set": "^4.3.3",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "electron-prompt": "^0.5.0",
+    "find-free-port": "^1.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jstree": "^3.3.5",
